# cpp-so-problem

./: CMakeLists.txt  cpp-so-problem.files  cpp-so-problem.includes
libs/liba/: CMakeLists.txt
libs/liba/src/: sample.cpp  sample_a1.h
libs/libb/: CMakeLists.txt
libs/libb/libs/liba2/: CMakeLists.txt
libs/libb/libs/liba2/src/: sample.cpp  sample_a2.h
libs/libb/src/: sample_b.cpp  sample_b.h
src/: m1.cpp
